@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, 2024, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2026, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,7 +22,7 @@
  */
 
 /*
- * @test
+ * @test id=COH
  * @bug 8232069
  * @requires vm.cds
  * @requires vm.bits == 64
@@ -31,7 +31,32 @@
  * @requires vm.gc == null
  * @library /test/lib /test/hotspot/jtreg/runtime/cds/appcds
  * @compile test-classes/Hello.java
- * @run driver TestZGCWithCDS
+ * @comment Only run if COH is unset or enabled.
+ * @requires vm.opt.UseCompactObjectHeaders != "false"
+ * @comment Driver sets compressed oops/class pointers, jtreg overrides will cause problems.
+            Only run the test if the flags are not set via the command line.
+ * @requires vm.opt.UseCompressedOops == null
+ * @requires vm.opt.UseCompressedClassPointers == null
+ * @run driver TestZGCWithCDS true
+ */
+
+/*
+ * @test id=NO-COH
+ * @bug 8232069
+ * @requires vm.cds
+ * @requires vm.bits == 64
+ * @requires vm.gc.Z
+ * @requires vm.gc.Serial
+ * @requires vm.gc == null
+ * @library /test/lib /test/hotspot/jtreg/runtime/cds/appcds
+ * @compile test-classes/Hello.java
+ * @comment Only run if COH is unset or disabled.
+ * @requires vm.opt.UseCompactObjectHeaders != "true"
+ * @comment Driver sets compressed oops/class pointers, jtreg overrides will cause problems.
+            Only run the test if the flags are not set via the command line.
+ * @requires vm.opt.UseCompressedOops == null
+ * @requires vm.opt.UseCompressedClassPointers == null
+ * @run driver TestZGCWithCDS false
  */
 
 import jdk.test.lib.Platform;
@@ -42,14 +67,14 @@ public class TestZGCWithCDS {
     public final static String UNABLE_TO_USE_ARCHIVE = "Unable to use shared archive.";
     public final static String ERR_MSG = "The saved state of UseCompressedOops and UseCompressedClassPointers is different from runtime, CDS will be disabled.";
     public static void main(String... args) throws Exception {
-         String compactHeaders = "-XX:+UseCompactObjectHeaders";
+         boolean compactHeadersOn = Boolean.valueOf(args[0]);
+         String compactHeaders = "-XX:" + (compactHeadersOn ? "+" : "-") + "UseCompactObjectHeaders";
          String helloJar = JarBuilder.build("hello", "Hello");
          System.out.println("0. Dump with ZGC");
          OutputAnalyzer out = TestCommon
                                   .dump(helloJar,
                                         new String[] {"Hello"},
                                         "-XX:+UseZGC",
-                                        "-XX:+UnlockExperimentalVMOptions",
                                         compactHeaders,
                                         "-Xlog:cds");
          out.shouldContain("Dumping shared data to file:");
@@ -59,7 +84,6 @@ public class TestZGCWithCDS {
          out = TestCommon
                    .exec(helloJar,
                          "-XX:+UseZGC",
-                         "-XX:+UnlockExperimentalVMOptions",
                          compactHeaders,
                          "-Xlog:cds",
                          "Hello");
@@ -72,7 +96,6 @@ public class TestZGCWithCDS {
                          "-XX:-UseZGC",
                          "-XX:+UseCompressedOops",           // in case turned off by vmoptions
                          "-XX:+UseCompressedClassPointers",  // by jtreg
-                         "-XX:+UnlockExperimentalVMOptions",
                          compactHeaders,
                          "-Xlog:cds",
                          "Hello");
@@ -86,7 +109,6 @@ public class TestZGCWithCDS {
                          "-XX:+UseSerialGC",
                          "-XX:-UseCompressedOops",
                          "-XX:-UseCompressedClassPointers",
-                         "-XX:+UnlockExperimentalVMOptions",
                          compactHeaders,
                          "-Xlog:cds",
                          "Hello");
@@ -100,7 +122,6 @@ public class TestZGCWithCDS {
                          "-XX:+UseSerialGC",
                          "-XX:-UseCompressedOops",
                          "-XX:+UseCompressedClassPointers",
-                         "-XX:+UnlockExperimentalVMOptions",
                          compactHeaders,
                          "-Xlog:cds",
                          "Hello");
@@ -113,7 +134,6 @@ public class TestZGCWithCDS {
                          "-XX:+UseSerialGC",
                          "-XX:+UseCompressedOops",
                          "-XX:-UseCompressedClassPointers",
-                         "-XX:+UnlockExperimentalVMOptions",
                          compactHeaders,
                          "-Xlog:cds",
                          "Hello");
@@ -127,7 +147,6 @@ public class TestZGCWithCDS {
                          "-XX:+UseSerialGC",
                          "-XX:+UseCompressedOops",
                          "-XX:+UseCompressedClassPointers",
-                         "-XX:+UnlockExperimentalVMOptions",
                          compactHeaders,
                          "-Xlog:cds",
                          "Hello");
@@ -142,7 +161,6 @@ public class TestZGCWithCDS {
                          "-XX:+UseSerialGC",
                          "-XX:-UseCompressedOops",
                          "-XX:+UseCompressedClassPointers",
-                         "-XX:+UnlockExperimentalVMOptions",
                          compactHeaders,
                          "-Xlog:cds");
          out.shouldContain("Dumping shared data to file:");
@@ -152,7 +170,6 @@ public class TestZGCWithCDS {
          out = TestCommon
                    .exec(helloJar,
                          "-XX:+UseZGC",
-                         "-XX:+UnlockExperimentalVMOptions",
                          compactHeaders,
                          "-Xlog:cds",
                          "Hello");
